data/all_generated_tests/raw_wast_tests/br_if_InvalidorInconsistentControlFlowGraph_1745.wast
;; 6. **Test Description: Mixed Loops and Conditional Structures**    - Construct nested `loop` and `if` statements with `br_if` instructions to conditionally continue or break, leading to potentially undefinable states.    - **Constraint Check**: Validate that control flow results in valid states regardless of branches taken.    - **CFG Relevance**: Ensures conditional jumps in mixed control structures respect CFG coherence.

(assert_invalid
  (module
    (func $mixed-loops (result i32)
      (loop (result i32)
        (if (i32.eq (i32.const 0) (i32.const 1))
          (then (br_if 1 (i32.const 0)))
          (else (br_if 0 (i32.const 1)))
        )
      )
    )
  )
  "unknown label"
)